cmake_minimum_required(VERSION 3.20)
project(C__Learning)

set(CMAKE_CXX_STANDARD 14)

add_executable(01 "01-Basic/01 变量.cpp")
add_executable(02 "01-Basic/02 常量.cpp")
add_executable(03 "01-Basic/03 整型.cpp")
add_executable(04 "01-Basic/04 浮点型.cpp")
add_executable(05 "01-Basic/05 字符型.cpp")
add_executable(06 "01-Basic/06 字符串型.cpp")
add_executable(07 "01-Basic/07 布尔型.cpp")
add_executable(08 "01-Basic/08 输入.cpp")
add_executable(09 "01-Basic/09 运算符.cpp")
add_executable(10 "01-Basic/10 if语句.cpp")
add_executable(11 "01-Basic/11 三目运算符.cpp")
add_executable(12 "01-Basic/12 switch语句.cpp")
add_executable(13 "01-Basic/13 do while语句.cpp")
add_executable(14 "01-Basic/14 for语句.cpp")
add_executable(15 "01-Basic/15 嵌套循环.cpp")
add_executable(16 "01-Basic/16 continue语句.cpp")
add_executable(17 "01-Basic/17 goto语句.cpp")
add_executable(18 "01-Basic/18 array元素反转.cpp")
add_executable(19 "01-Basic/19 array冒泡排序.cpp")
add_executable(20 "01-Basic/20 array二维数组.cpp")
add_executable(21 "01-Basic/21 函数demo.cpp")
add_executable(22 "01-Basic/22 函数的分文件书写.cpp" "01-Basic/22-source.cpp" "01-Basic/22-head.h")
add_executable(23 "01-Basic/23 指针的定义.cpp")
add_executable(24 "01-Basic/24 const指针.cpp")
add_executable(25 "01-Basic/25 数组指针.cpp")
add_executable(26 "01-Basic/26 函数指针.cpp")
add_executable(27 "01-Basic/27 结构体定义.cpp")
add_executable(28 "01-Basic/28 结构体指针.cpp")
add_executable(29 "01-Basic/29 结构体数组.cpp")
add_executable(30 "01-Basic/30 结构体const.cpp")
add_executable(31 "03-Core/01 代码区与全局区.cpp")
add_executable(32 "03-Core/02 new和delete.cpp")