cmake_minimum_required(VERSION 3.20)
project(03_Core)

set(CMAKE_CXX_STANDARD 14)

add_executable(01 "01 代码区与全局区.cpp")
add_executable(02 "02 new和delete.cpp")
add_executable(03 "03 引用函数参数.cpp")
add_executable(04 "04 引用函数返回.cpp")
add_executable(05 "05 函数默认参数.cpp")
add_executable(06 "06 封装的意义.cpp")
add_executable(07 "07 学生类的设计.cpp")
add_executable(08 "08 访问权限.cpp")
add_executable(09 "09 成员属性私有化.cpp")
add_executable(10 "10 构造函数与析构函数.cpp")
add_executable(11 "11 构造函数的分类及调用.cpp")
add_executable(12 "12 拷贝构造函数的使用.cpp")
add_executable(13 "13 深拷贝与浅拷贝.cpp")
add_executable(14 "14 初始化列表.cpp")
add_executable(15 "15 类对象做类成员.cpp")
add_executable(16 "16 静态成员函数.cpp")
add_executable(17 "17 this指针.cpp")
add_executable(18 "18 全局函数做友元.cpp")
add_executable(19 "19 类做友元.cpp")
add_executable(20 "20 成员函数做友元.cpp")
add_executable(21 "21 运算符重载-加号.cpp")
add_executable(22 "22 运算符重载-左移运算.cpp")
add_executable(23 "23 运算符重载-递增.cpp")
add_executable(24 "24 运算符重载-赋值.cpp")
add_executable(25 "25 运算符重载-关系.cpp")
add_executable(26 "26 运算符重载-括号.cpp")
add_executable(27 "27 继承同名成员处理.cpp")
add_executable(28 "28 菱形继承.cpp")
add_executable(29 "29 多态基本语法.cpp")
add_executable(30 "30 多态-计算器.cpp")
add_executable(31 "31 纯虚函数与抽象类.cpp")
add_executable(32 "32 虚析构与纯虚析构.cpp")
add_executable(33 "33 写文件.cpp")
add_executable(34 "34 读文件.cpp")
add_executable(35 "35 写二进制文件.cpp")
add_executable(36 "36 读二进制文件.cpp")