cmake_minimum_required(VERSION 3.21)
project(04_STL)

set(CMAKE_CXX_STANDARD 14)

add_executable(01 "01 模板基本语法.cpp")
add_executable(02 "02 模板案例-排序.cpp")
add_executable(03 "03 模板函数调用规则.cpp")
add_executable(04 "04 特殊数据类型模板.cpp")
add_executable(05 "05 类模板基本语法.cpp")
add_executable(06 "06 类模板默认参数.cpp")
add_executable(07 "07 类模板对象做函数参数.cpp")
add_executable(08 "08 类模板继承.cpp")
add_executable(09 "09 类模板成员函数的类外实现.cpp")
add_executable(10 "10 person.cpp")
add_executable(11 "11 string初始化.cpp")
add_executable(12 "12 string赋值.cpp")
add_executable(13 "13 vector初始化.cpp")
add_executable(14 "14 vector赋值.cpp")
add_executable(15 "15 vector容量管理.cpp")
add_executable(16 "16 vector容量互换.cpp")
add_executable(17 "17 deque初始化.cpp")
add_executable(18 "18 案例-评委打分.cpp")
add_executable(19 "19 stack常用接口.cpp")
add_executable(20 "20 queue常用接口.cpp")
add_executable(21 "21 list初始化.cpp")
add_executable(22 "22 list赋值.cpp")
add_executable(23 "23 list存取.cpp")
add_executable(24 "24 list反转与排序.cpp")
add_executable(25 "25 set初始化.cpp")
add_executable(26 "26 set插入和删除.cpp")
add_executable(27 "27 set排序规则.cpp")
add_executable(28 "28 pair队组.cpp")
add_executable(29 "29 map初始化.cpp")
add_executable(30 "30 map插入删除.cpp")
add_executable(31 "31 map排序规则.cpp")